--- a/sass/_bootswatch.scss
+++ b/sass/_bootswatch.scss
@@ -405,8 +405,8 @@ input[type="checkbox"] {
 .progress {
   height: 22px;
   padding: 2px;
-  background-color: #f6f6f6;
-  border: 1px solid #ccc;
+  /*background-color: #f6f6f6;
+  border: 1px solid #ccc;*/
   @include box-shadow(none);
 }
 
