--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -647,7 +647,9 @@ $alert-danger-border:         $state-danger-border;
 //##
 
 //** Background color of the whole progress component
-$progress-bg:                 #f5f5f5;
+
+/*$progress-bg:                 #f5f5f5;*/
+
 //** Progress bar text color
 $progress-bar-color:          #fff;
 //** Variable for setting rounded corners on progress bar.
