--- a/sass/main.scss
+++ b/sass/main.scss
@@ -29,11 +29,28 @@
     font-size: 20px;
     text-align: center;
     padding-top: 20px;
+
+    & .message{
+      margin-top: -10px;
+      text-align: left;
+
+      & p{
+        font-size: 30px;
+      }
+    }
   }
 
   & .powerby {
     height: 100px;
     line-height: 100px;
     text-align: right;
+  }
+
+  .guy img {
+    width: 75px;
+    height: 75px;
+    border: 3px solid rgba(255, 255, 255, .2);
+
+    border-radius: 75px 75px 75px 75px;
   }
 }
